# Crew_Seo

CrewAI-SEO-Agency-main/: .clinerules  .env.example  .gitignore  GITHUB_SETUP.md  OPENLIT_MONITORING.md  README.md  cleanup_project.sh  content_strategy_eaton_associates.md  pyproject.toml  run_seo_crew.py  run_simplified_crew.py  seo_production.py  training_explanation.md
CrewAI-SEO-Agency-main/examples/: quickstart.py
CrewAI-SEO-Agency-main/knowledge/: google_algorithm_updates.md  seo_best_practices.md
CrewAI-SEO-Agency-main/monitoring/: seo_agency_run_2025-03-21T22-12-37.527746.json  seo_agency_run_2025-03-21T22-56-04.026551.json  seo_agency_run_2025-03-22T07-03-16.342969.json  seo_agency_run_2025-03-22T07-04-00.328849.json  seo_agency_run_2025-03-22T07-54-15.487187.json  seo_agency_run_2025-03-22T07-56-15.397134.json  seo_agency_run_2025-03-22T07-59-43.997261.json  seo_agency_run_2025-03-22T08-03-24.379997.json  seo_agency_run_2025-03-22T11-09-05.113353.json  seo_agency_run_2025-03-22T11-28-44.254835.json  seo_agency_run_2025-03-22T11-31-44.326112.json  seo_agency_run_2025-03-22T11-35-33.862291.json  seo_agency_run_2025-03-22T11-50-57.348885.json  seo_agency_run_2025-03-22T14-29-57.916826.json  seo_agency_run_2025-03-22T17-55-50.694263.json  seo_agency_run_2025-03-22T17-56-16.412872.json  seo_production_2025-03-22T12-13-41.348234.json
CrewAI-SEO-Agency-main/output/: analytics_reporting_framework.md  backlink_strategy_plan.md  competitor_analysis_report.md  content_strategy_plan.md  created_content.md  keyword_research_report.md  onpage_optimization_report.md  (+2 more)
(+38 files in other folders)
